2006-04-07  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* src/s3v.h:
	* src/s3v_dga.c:
	* src/s3v_driver.c:
	* src/s3v_i2c.c:
	* src/s3v_shadow.c:
	Unlibcwrap.  Bump server version requirement.  Bump to 1.9.0.

2006-02-08  Luc Verhaegen <libv@skynet.be>

	* src/s3v.h:
	* src/s3v_driver.c: (S3VPreInit):

	Remove another insane use of pScrn->clock. Code ended up being ignored
	anyway.

2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* man/Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-12-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Remove extraneous AC_MSG_RESULT.

2005-11-29  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Only build dlloader modules by default.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update pkgcheck dependencies to work with separate build roots.